flux/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: tls-gateway
    namespace: kube-system
    annotations:
        cert-manager.io/issuer: letsencrypt
spec:
    gatewayClassName: cilium
    addresses:
        - type: IPAddress
          # axiom-vm-k8s-master
          value: "10.67.1.103"
    listeners:
        - name: https
          protocol: HTTPS
          port: 443
          hostname: "*.axiom.lucasfehres.nl"
          tls:
              certificateRefs:
                  - kind: Secret
                    name: ca
